<resources>
    <string name="app_name">SASS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Link input -->
    <string name="app_logo">App Logo</string>
    <string name="sass">SASS</string>
    <string name="enter_link" translatable="false">Enter School</string>
    <string name="https_example_com_link" translatable="false">University of Cebu</string>
    <string name="enter">ENTER</string>

    <!--Log in -->
    <string name="sass1">SASS</string>
    <string name="enter_your_email_and_password_for_sign_in">Enter your email and</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="are_you_new_create_an_account">Are you new? Create an account</string>

    <!-- activity main -->
    <string name="menu_icon">Menu Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="app_logo1">App Logo</string>
    <string name="by_chatting_with_me_you_accept_to_our_terms_and_conditions_as_well_as_our_privacy_and_cookie_policies">By chatting with me, you accept to our Terms and Conditions as well as our Privacy and Cookie Policies.</string>
    <string name="report">Report</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="send_a_message">Send a message</string>
    <string name="send_button">Send Button</string>
    <string name="btn_report">Report</string>
    <string name="btn_book_appointment">Book Appointment</string>
    <string name="btn_ask_questions">Ask Questions</string>
    <string name="report_description">Report unwanted behavior</string>
    <string name="book_appointment_description">Book an appointment for SAO</string>
    <string name="ask_questions_description">Regarding school</string>

    <!-- Registration -->
    <string name="create_account">Create Account</string>
    <string name="enter_your_name_email_and_password_for_sign_up">Enter your Name, Email and Password for </string>
    <string name="sign_up">sign up.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="passwordregistration">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions.</string>
    <string name="register">REGISTER</string>
    <string name="or_register_with">or register with</string>
    <string name="sign_in_with_google1">Sign in with Google</string>


    <!-- Notification -->
    <string name="menu_icon1">Menu Icon</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_read">Mark all Read</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="notificationsmenu">Notifications</string>

    <!-- Menu -->
    <string name="new_chat"> New Chat</string>
    <string name="history">History</string>
    <string name="clear_conversations">Clear Conversations</string>
    <string name="notificationsMenu">Notifications</string>
    <string name="updates_and_faqmenu">Updates and FAQ</string>
    <string name="log_outmenu">Log out</string>

    //Profile
    <string name="profile">PROFILE</string>
    <string name="edit">Edit</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_initial">Middle Initial</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_course">Course</string>
    <string name="my_email">Email Address</string>
    <string name="add_email">+ Add Email Address</string>
    <string name="content_desc_menu_icon">Menu Icon</string>
    <string name="content_desc_profile_pic">Profile Picture</string>
    <string name="user_id">20200069</string>
    <string name="user_name">Ralph Christian Pilapil</string>
    <string name="user_email">ralphc.pilapil@gmail.com</string>

    //itemConversation
    <string name="content_desc_chat_icon">Chat Icon</string>
    <string name="chat_title">Chat Title</string>

    //nav_drawer
    <!-- General UI Strings -->
    <string name="menu_icon_description">Open navigation menu</string>
    <string name="main_content_placeholder">Main Content Here</string>

    <!-- Navigation Header -->
    <string name="profile_picture_description">User profile picture</string>
    <string name="user_role">BSIT</string>
    <string name="close_nav_description">Close navigation menu</string>

    <!-- Navigation Menu Buttons -->
    <string name="updates_faq">Updates and FAQ</string>
    <string name="logout">Log Out</string>

    <!-- Accessibility Descriptions -->
    <string name="delete_icon_description">Delete conversation history</string>
    <string name="notification_icon_description">Manage notifications</string>
    <string name="info_icon_description">View updates and FAQ</string>
    <string name="logout_icon_description">Log out of the application</string>

    //nav_header
    <string name="close_nav">Close Navigation</string>
    <string name="user_name_placeholder">Your Name</string>
    <string name="user_role_placeholder">Your Role</string>

    //notification_item
    <string name="appointment_success">Appointment Successful</string>
    <string name="notification_date_placeholder">Friday, 01/01/24, 10:30 PM</string>
    <string name="user_profile">User Profile</string>
    <string name="sass_bot">SASS Bot</string>
    <string name="sass_bot1">SASS Bot</string>
    <string name="i_want_to_report_someone">I want to report someone</string>
    <string name="sure_i_m_happy_to_help_you_with_that">Sure, I’m happy to help you with that.</string>
    <string name="just_please_fill_up_this_form">Just please fill up this form</string>
    <string name="fill_up_the_form_and_submit_after_filling_up_hope_you_have_a_good_day">Fill up the form and submit after filling up. Hope you have a good day.</string>
    <string name="report_successfully_filed">Report successfully filed.</string>
    <string name="when_did_this_happen">When did this happen?</string>
    <string name="name_of_offender">Name of offender</string>
    <string name="submit_report">submit_report</string>
    <string name="reason">Reason</string>
    <string name="report1">Report</string>
    <string name="calendar">Calendar</string>

    //Report
    <string name="menu_description">Menu</string>
    <string name="report_warning">Make sure to report the right person and also legit. Reporting someone without legitimacy will be punished accordingly</string>

    <!-- Checkbox Texts -->
    <string name="understand_text">I Understand.</string>
    <string name="confirmation_text">I confirm that the information provided is accurate to the best of my knowledge.</string>

    <!-- Input Hints -->
    <string name="hint_name">Name of the person involved:</string>
    <string name="hint_id_number">ID Number of the Person Involved:</string>
    <string name="hint_reason">Reason for report:</string>
    <string name="hint_description">Describe what happened</string>
    <string name="done_button">D O N E</string>


    //Calendar
    <string name="select_date">Select a date to see available schedules</string>
    <string name="bookAppointment">Book Appointment</string>

    //AppointmentBooking

    <!-- Date Picker -->
    <string name="pick_date_time">Pick a Date and Time</string>


    <!-- Time Selection -->
    <string name="choose_time">Choose Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hour_hint">HH</string>
    <string name="minute_hint">MM</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>

    <!-- Description Field -->
    <string name="description">Description</string>
    <string name="add_button">ADD</string>

    <!-- Selected Date & Time -->
    <string name="date_time_label">Selected Date and Time</string>
    <string name="select_date_time">Select Date and Time</string>
    <string name="time_placeholder">--</string>
    <string name="colon">:</string>
    <string name="zero">00</string>


    //Schedules
    <!-- Content -->
    <string name="meeting_title">Meeting with chairman</string>
    <string name="meeting_time">8:00 to 8:30 AM</string>

    <!-- Fragment Schedule Text -->

    <string name="back_logo">Back Button</string>
    <string name="date_text">Select Date</string>
    <string name="available_time">Available Time</string>
    <string name="booked_schedule">Booked Schedule</string>
    <string name="time_start">8:00 AM</string>
    <string name="time_end">8:30 AM</string>


    //Conversation
    <string name="menu">Menu</string>
    <string name="you">You</string>
    <string name="bot_name">SASS</string>
    <string name="bot_message">Bot response here.</string>
    <string name="user_message">User response here.</string>
    <string name="copy">Copy</string>
    <string name="refresh">Refresh</string>
    <string name="dislike">Dislike</string>
    <string name="bot_icon">Bot Icon</string>
    <string name="warning_message">Your messages may be used to improve our AI.</string>
    <string name="password_for_sign_in">password for sign in</string>
    <string name="password1">Password</string>
    <string name="username_or_email1">Username or email</string>
    //item_chat
    <string name="ai_chat_tool_impact_writing1">ai_chat_tool_impact_writing</string>
    //Nav_drawer
    <string name="bsit">BSIT</string>
    <string name="ralph_christian">Ralph Christian</string>
    <string name="new_chat1">New Chat</string>
    <string name="chat_history1">chat history</string>
    //Nav_header
    <string name="bsit1">BSIT</string>
    <string name="ralph_christian1">Ralph Christian</string>


    //Submission
    <string name="browse_btn">Browse File</string>
    <string name="browse_submit">SUBMIT</string>
    <string name="browse_guidelines">Make sure to read and follow the guidelines of the letters or documents! \nClick Here! to see sample documents.</string>
    <string name="browse_file">Filename_here.pdf</string>
<<<<<<< Updated upstream
    <string name="enter_school_name">Enter School Name</string>
    <string name="reason_for_submitting">Reason for Submitting:</string>
    <string name="choose_a_file_ndocs_pdf">Choose a file\nDOCS, PDF</string>
=======
    <string name="submission_nav">Submission</string>

>>>>>>> Stashed changes


</resources>