<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LinkInput"
    android:background="@color/darkBlue">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sass"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_enter_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_link"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_link"
        android:layout_width="match_parent"
        android:maxWidth="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field_background_login"
        android:hint="@string/https_example_com_link"
        android:inputType="textUri"
        android:padding="12dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_link"
        android:autofillHints="https://www.example.com"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:maxWidth="300dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:backgroundTint="@color/buttonBlue"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/et_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
